Project

General

Profile

Actions

Bug #37703

closed

cls_rgw.usage_basic fails in test_cls_rgw.sh workunit during upgrade

Added by Sage Weil over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-12-18T04:13:02.855 INFO:tasks.workunit.client.0.smithi157.stdout:[ RUN      ] cls_rgw.usage_basic
2018-12-18T04:13:02.900 INFO:tasks.workunit.client.0.smithi157.stdout:/home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.10-129-ge353908/rpm/el7/BUILD/ceph-12.2.10-129-ge353908/src/test/cls_rgw/test_cls_rgw.cc:829: 
Failure
2018-12-18T04:13:02.901 INFO:tasks.workunit.client.0.smithi157.stdout:      Expected: 0
2018-12-18T04:13:02.901 INFO:tasks.workunit.client.0.smithi157.stdout:To be equal to: cls_rgw_usage_log_trim(ioctx, oid, user, start_epoch, end_epoch)
2018-12-18T04:13:02.901 INFO:tasks.workunit.client.0.smithi157.stdout:      Which is: -22
2018-12-18T04:13:02.901 INFO:tasks.workunit.client.0.smithi157.stdout:[  FAILED  ] cls_rgw.usage_basic (44 ms)

/a/sage-2018-12-18_03:25:27-upgrade:luminous-x-wip-sage-testing-2018-12-17-1735-distro-basic-smithi/3372945
Actions #2

Updated by Sage Weil over 5 years ago

  • Status changed from 12 to Resolved
Actions

Also available in: Atom PDF