cls/rgw: update rgw_cls_usage_log_trim_op encode version

commit 7b17da691f3bee8118ac69a7419519017030a4c9 added a 'bucket' field
to this op without bumping the encode version, and is causing failures
on upgrade

Fixes: http://tracker.ceph.com/issues/37703

Signed-off-by: Casey Bodley <cbodley@redhat.com>